    Added Axolotl to experience.yml for combat and taming
    Added Glow_Squid to experience.yml for combat and taming
    Updated Super Breaker to recognize the new pick-axe appropriate blocks
    Updated Tree Feller to recognize Azalea Leaves

    Added Rooted Dirt to experience.yml for Excavation
    Added Moss Block to experience.yml for Herbalism
    Added Glow Lichen to experience.yml for Herbalism
    Added Tuff to experience.yml for Mining
    Added Calcite to experience.yml for Mining
    Added Smooth Basalt to experience.yml for Mining
    Added Block_Of_Amethyst to experience.yml for Mining
    Added Budding Amethyst to experience.yml for Mining
    Added Small_Amethyst_Bud to experience.yml for Mining
    Added Medium Amethyst Bud to experience.yml for Mining
    Added Large Amethyst Bud to experience.yml for Mining
    Added Amethyst Cluster to experience.yml for Mining
    Added Deepslate to experience.yml for Mining
    Added Cobbled Deepslate to experience.yml for Mining
    Added Copper Ore to experience.yml for Mining
    Added Deepslate Redstone Ore to experience.yml for Mining
    Added Deepslate Copper Ore to experience.yml for Mining
    Added Deepslate Coal Ore to experience.yml for Mining
    Added Deepslate Diamond Ore to experience.yml for Mining
    Added Deepslate Emerald Ore to experience.yml for Mining
    Added Deepslate Iron Ore to experience.yml for Mining
    Added Deepslate Gold Ore to experience.yml for Mining
    Added Deepslate Lapis Lazuli Ore to experience.yml for Mining
    Added Lapis Lazuli Ore to experience.yml for Mining (was missing)

    Added Moss Block to Bonus Drops for Herbalism in config.yml
    Added Tuff to Bonus Drops for Mining in config.yml
    Added Amethyst Shard to Bonus Drops for Mining in config.yml
    Added Calcite to Bonus Drops for Mining in config.yml
    Added Smooth Basalt to Bonus Drops for Mining in config.yml
    Added Block_Of_Amethyst to Bonus Drops for Mining in config.yml