@@ -295,7 +295,9 @@ Experience_Values:
         Brown_Mushroom_Block: 70
         Mushroom_Stem: 80
     Herbalism:
-        Glow_Lichen: 95
+        Cave_Vines: 90
+        Cave_Vines_Plant: 90
+        Glow_Lichen: 200
         Moss_Block: 150
         Crimson_Roots: 6
         Warped_Roots: 6
