@@ -12,6 +12,8 @@ Version 2.1.197
 
     Added Rooted Dirt to experience.yml for Excavation
     Added Moss Block to experience.yml for Herbalism
+    Added Cave Vines to experience.yml for Herbalism
+    Added Cave Vines Plant to experience.yml for Herbalism
     Added Glow Lichen to experience.yml for Herbalism
     Added Tuff to experience.yml for Mining
     Added Calcite to experience.yml for Mining
@@ -36,6 +38,9 @@ Version 2.1.197
     Added Lapis Lazuli Ore to experience.yml for Mining (was missing)
 
     Added Moss Block to Bonus Drops for Herbalism in config.yml
+    Added Glow Berries to Bonus Drops for Herbalism in config.yml
+    Added Cave Vines to Bonus Drops for Herbalism in config.yml
+    Added Cave Vines Plant to Bonus Drops for Herbalism in config.yml
     Added Tuff to Bonus Drops for Mining in config.yml
     Added Amethyst Shard to Bonus Drops for Mining in config.yml
     Added Calcite to Bonus Drops for Mining in config.yml
